Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26761

Ctrl+Ins breaks vertical selection

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 6.0.2
    • Qt Creator 6.0.1
    • Editors
    • None
    • Kubuntu 21.10 x86_64
    • Linux/X11
    • e478c915ad (qt-creator/qt-creator/6.0) e478c915ad (qt-creator/qt-creator/master) e478c915ad (qt-creator/qt-creator/qmlprojectstorage) e478c915ad (qt-creator/qt-creator/qds-3.0)

      1. Open a C/C++ source file for editing.
      2. Use vertical text selection to select a section on a few lines - Alt + drag mouse.
      3. Press Ctrl+Ins to copy the selected characters.

      As soon as you press Ctrl+Ins QtCreator breaks vertical selection and instead selects the while lines that were used in the vertical selection. The whole lines are copied to clipboard instead of only the selected parts.

      QtCreator should copy only the selected characters. The copied characters should be insertable at a different position, in another vertical cursor location.

        For Gerrit Dashboard: QTCREATORBUG-26761
        # Subject Branch Project Status CR V

            davschul David Schulz
            lastique Andrey Semashev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes